// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Distribution gap renders 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledBox-bStriS gQTNhE"
  >
    <div
      class="StyledBox-bStriS bmUrZC"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs ebfbnM"
      direction="row"
    />
    <div
      class="StyledBox-bStriS bmUrZC"
    >
      <div
        class="StyledBox-bStriS bBXCcb"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs ebfbnM"
        direction="column"
      />
      <div
        class="StyledBox-bStriS hsWcIa"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS gQTNhE"
  >
    <div
      class="StyledBox-bStriS bmUrZC"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs jRRtxU"
      direction="row"
    />
    <div
      class="StyledBox-bStriS bmUrZC"
    >
      <div
        class="StyledBox-bStriS bBXCcb"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs jRRtxU"
        direction="column"
      />
      <div
        class="StyledBox-bStriS hsWcIa"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS gQTNhE"
  >
    <div
      class="StyledBox-bStriS bmUrZC"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs cCIVcT"
      direction="row"
    />
    <div
      class="StyledBox-bStriS bmUrZC"
    >
      <div
        class="StyledBox-bStriS bBXCcb"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs cCIVcT"
        direction="column"
      />
      <div
        class="StyledBox-bStriS hsWcIa"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS gQTNhE"
  >
    <div
      class="StyledBox-bStriS bmUrZC"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs edutSJ"
      direction="row"
    />
    <div
      class="StyledBox-bStriS bmUrZC"
    >
      <div
        class="StyledBox-bStriS bBXCcb"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs edutSJ"
        direction="column"
      />
      <div
        class="StyledBox-bStriS hsWcIa"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Distribution renders 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
/>
`;

exports[`Distribution values renders 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledBox-bStriS gQTNhE"
  >
    <div
      class="StyledBox-bStriS iUsjod"
    >
      <span>
        20
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs ebfbnM"
      direction="row"
    />
    <div
      class="StyledBox-bStriS bWrCtE"
    >
      <div
        class="StyledBox-bStriS bmUrZC"
      >
        <span>
          3
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs ebfbnM"
        direction="column"
      />
      <div
        class="StyledBox-bStriS okMhX"
      >
        <div
          class="StyledBox-bStriS bBXCcb"
        >
          <span>
            2
          </span>
        </div>
        <div
          class="StyledBox__StyledBoxGap-ixLlSs ebfbnM"
          direction="row"
        />
        <div
          class="StyledBox-bStriS hsWcIa"
        >
          <span>
            1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
